Moved and restyled Roles section

--- a/index.html
+++ b/index.html
@@ -840,16 +840,94 @@
           </div>
         </section>
 
-        <!-- Roles Section -->
-        <section class="roles-section">
-          <h3 class="h3">Roles</h3>
-          <ul class="roles-list content-card">
-            <li class="roles-item">Development Manager</li>
-            <li class="roles-item">Solution Architect</li>
-            <li class="roles-item">Development Lead</li>
-            <li class="roles-item">Sr. Software Engineer</li>
-            <li class="roles-item">Software Engineer</li>
-          </ul>
+        <!-- New Roles Section -->
+        <section class="education">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="briefcase-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Roles</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Development Manager</h4>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Solution Architect</h4>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Development Lead</h4>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Sr. Software Engineer</h4>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Software Engineer</h4>
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="education">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Education</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Bachelor Of Engineering</h4>
+
+              <span>2008</span>
+
+              <p class="timeline-text">
+				B.E (Computer Engineering) with Distinction in June 2008 from Pune     Institute of Computer Technology (P.I.C.T) college, (University of Pune
+              </p>
+
+            </li>
+<!--
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+
+              <span>2006 — 2007</span>
+
+              <p class="timeline-text">
+                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
+                omnis..
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+
+              <span>2002 — 2004</span>
+
+              <p class="timeline-text">
+                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
+                magni dolores
+                eos.
+              </p>
+
+            </li> -->
+
+          </ol>
+
         </section>
 
       </article>
