Update Traveling & Photos to Traveling & Chess section

--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Traveling & Photos</h4>
+                <h4 class="h4 service-item-title">Traveling & Chess</h4>
 
                 <p class="service-item-text">
-                  I love travel and taking high-quality photos.
+                  I love travel and taking I love to travel and explore new places, and I also enjoy playing chess.
                 </p>
               </div>
 
