Added CV download button

--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
 
           </li>
 
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="document-text-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Resume</p>
+
+              <a href="https://docs.google.com/document/d/1qCCfxWUhhvXPjaQ8JsORXkoNe0NBWt7L/edit?usp=sharing&ouid=110697102987675777254&rtpof=true&sd=true" class="contact-link" target="_blank">Download CV</a>
+            </div>
+
+          </li>
+
         </ul>
 
         <div class="separator"></div>
@@ -128,7 +142,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/saket-waikar/" class="social-link">
+            <a href="https://www.linkedin.com/in/saket-waikar/" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
