Updated CV download URL

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="contact-info">
               <p class="contact-title">Resume</p>
 
-              <a href="https://docs.google.com/document/d/1qCCfxWUhhvXPjaQ8JsORXkoNe0NBWt7L/edit?usp=sharing&ouid=110697102987675777254&rtpof=true&sd=true" class="contact-link" target="_blank">Download CV</a>
+              <a href="https://drive.google.com/file/d/1sBE_KUT1ax7KTSS48KVmwkU-jSVAtzZU/view?usp=sharing" class="contact-link" target="_blank">Download CV</a>
             </div>
 
           </li>
